tried to override default settings of calendar css

--- a/src/components/AvailabilityResultsCalendar/AvailabilityResultsCalendar.css
+++ b/src/components/AvailabilityResultsCalendar/AvailabilityResultsCalendar.css
@@ -59,7 +59,7 @@
 
 /* line between columns */
 .resultsCalendar .calendar_default_cell_inner {
-  border-left: 1px solid grey;
+  border-left: 1px solid grey !important;
 }
 
 
