--- a/src/components/Availability/Availability.css
+++ b/src/components/Availability/Availability.css
@@ -189,13 +189,16 @@
 
 /* calendar styles */
 .calendar_default_main {
-  border: 1px solid #1657F3 !important;
   font-family: 'Lexend', sans-serif !important;
   font-size: 12px !important;
   border-radius: 15px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   margin-top: 5px;
   padding-bottom: 10px;
+}
+
+.availability .calendar_default_main {
+  border: 1px solid #1657F3 !important;
 }
 
 .calendar_default_alldayheader_inner,
@@ -239,7 +242,7 @@
 
 
 /* events */
-.calendar_default_event_inner {
+.availability .calendar_default_event_inner {
   background: #1657F340 !important;
   border: 2px solid #FFFFFF !important;
   box-sizing: border-box !important;
