--- a/src/components/AvailabilityResultsCalendar/AvailabilityResultsCalendar.css
+++ b/src/components/AvailabilityResultsCalendar/AvailabilityResultsCalendar.css
@@ -65,8 +65,8 @@
 
 /* events styling  */
 .resultsCalendar .calendar_default_event_inner {
-  width: 20px;
-  padding: 6px 3px 0 3px;
+  width: 15px;
+  padding: 6px 0px 0px 6px;
   font-weight: 600;
   margin-left: 10%;
   border-radius: 0;
