--- a/src/components/Availability/Availability.css
+++ b/src/components/Availability/Availability.css
@@ -170,6 +170,7 @@
     position: relative;
     margin-left: 2%;
     margin-top: -345px;
+    margin-bottom: 15px;
 }
 .availabilityModal .calendarHeader {
   text-align: left;
@@ -320,19 +321,19 @@
   }
 
   .availabilitySubmitBtn{
-    right: -47px;
+    right: -40px;
   }
 
   .calendarContainer{
-    margin-top: -350px;
+    margin-top: -400px;
   }
 }
 
-/* ipad mini */
-@media only screen and (max-width: 810px) and (max-height: 1024px){
+/* Nexus 10 Android */
+@media only screen and (max-width: 800px) and (max-height: 1280px) {
   .availabilityModalInfo {
-      max-width: 100%;
-    }
+    max-width: 100%;
+  }
 }
 
 
@@ -394,10 +395,25 @@
 
 /* phones landscape */
 @media only screen and (max-width: 926px) and (max-height: 428px){
+  .availabilityModal,
+  .noAvailModal {
+    top: 1%;
+    right: 1%;
+    bottom: 1%;
+    left: 1%;
+    justify-content: flex-start;
+  }
+
+    .availabilityModalInfo{
+      max-width: 250px;
+    }
+
   /* no avail modal */
   .noAvailModal{
     padding: 0;
+    justify-content: space-evenly;
   }
+  
   .noAvailModal h1 {
       font-size: 1.8rem;
       padding: 10px;
@@ -409,3 +425,13 @@
     }
 }
 
+/* small phones */
+/* can't see availability calendar form */
+@media only screen and (max-width: 699px) and (max-height: 400px){
+  .availabilityModalInfo{
+    max-width: 100%;
+  }
+  .availabilityModalInfo h1{
+    padding-top: 5px;
+  }
+}
