removed button border

--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,7 @@ button {
   color: #FFFFFF;
   background-color: #1657F3;
   width: 175px;
+  border: none;
   border-radius: 8px;
   padding: 8px 20px;
   transition: 0.3s;
