--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -701,9 +701,9 @@ div.navigator_default_select.navigator_default_weekend .navigator_default_cell_b
 
 }
 
-@media only screen and (max-width: 375px){
+/* @media only screen and (max-width: 375px){
   
-}
+} */
 
 /* small phones */
 /* @media only screen and (max-width: 375px) and (max-height:667px){
