--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -98,3 +98,31 @@
 .users {
   padding-top: 8px ;
 }
+
+/* ------- Media Queries */
+/* small phones portrait */
+@media only screen and (max-width: 384px) and (max-height: 667px){
+  .sidebar svg{
+    width: 45%;
+  }
+
+  .displayNames > ul:nth-child(1){
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+
+}
+
+/* small phones landscape */
+@media only screen and (max-width: 667px) and (max-height: 384px){
+  .sidebar{
+    min-width: 220px;
+  }
+  
+  .sidebar svg{
+    width: 60%;
+  }
+
+
+}
