--- a/src/components/Overlap/Overlap.css
+++ b/src/components/Overlap/Overlap.css
@@ -117,36 +117,34 @@
 }
 
 /* container ul for day items */
-.overlapInfoDetails > ul {
+.availableTimes{
   width: 70%;
 }
 
 /* each day container */
-.overlapInfoDetails li {
+.availableTimes > li {
   background-color: #ffffff;
   border-radius: 10px;
   margin: 20px 0;
+  padding: 20px;
 }
 
 /* day of the week and date */
-.overlapInfoDetails .day {
+.availableTimes .day {
   font-size: 1rem;
   text-align: left;
   font-weight: 500;
-  padding: 30px 0 10px 40px;
+  padding: 10px 0 10px 40px;
 }
 .day .text{
   font-size: 1.5rem;
 }
 
-.overlapInfoDetails .dayTimes{
-  width: 95%;
-  padding-bottom: 10px;
-}
-.dayTimes li{
+
+.dayTimes{
   display: flex;
   align-items: center;
-  width: 100%;
+  width: 95%;
   margin-right: 20px;
   border: none;
   margin: 7px 0;
@@ -172,7 +170,7 @@
 }
 
 /* text of length all are available */
-.overlapInfoDetails .length {
+.availableTimes .length {
   font-size: 1rem;
   font-weight: 400;
   line-height: 18px;
@@ -181,7 +179,7 @@
   font-weight: 600;
 }
 
-/* user display */
+/* user names display */
 .userNames{
   display: flex;
   justify-content: flex-end;
@@ -267,9 +265,8 @@
 }
 
 /* media queries */
-@media only screen and (max-width: 1025px){
+@media only screen and (max-width: 1080px){
   .overlapInfoIntro{
-    height: 180px;
     padding-top: 10px;
   }
 
@@ -277,15 +274,13 @@
     align-self: flex-end;
     width: 200px;
     text-align: center;
-    /* margin-top: -30px;
-    margin-bottom: 10px; */
-    margin: -30px 30px 10px 10px;
+    margin-top: -35px;
   }
 }
 
 @media only screen and (max-width: 960px){
   /* change available times display to be columns */
-  .availableTimes li{
+  .availableTimes > li{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -297,27 +292,24 @@
     padding-left: 0;
   }
 
-  .overlapInfoDetails .dayTimes{
-    width: 100%;
-  }
 
-  .dayTimes > li{
+  .dayTimes{
     flex-direction: column;
     padding: 2px 0;
     margin: 0;
+    width: 100%;
   }
 
   .availDisplay{
-    width: 85%;
     padding: 10px 0;
   }
   
   .userNames{
-    width: 75%;
+    width: 85%;
     padding: 0;
   }
 
-  .userNames li{
+  .userNames > li{
     justify-content: center;
     align-items: center;
     height: 25px;
@@ -374,7 +366,7 @@
 
   .overlapInfoDetails {
     padding: 0 5%;
-    text-align: center;
+    /* text-align: center; */
   }
 
   .overlapInfoDetails > ul{
@@ -402,7 +394,7 @@
 
   .overlapInfoDetails {
     padding: 0 5%;
-    text-align: center;
+    /* text-align: center; */
   }
 
   /* hide calendar view button */
